--- a/app/globals.css
+++ b/app/globals.css
@@ -212,6 +212,7 @@ a.active {
   top: 0;
   opacity: 0;
   transition: 2s;
+  margin: 0 48px;
 }
 
 .about {
@@ -274,7 +275,6 @@ a.active {
 
 .skills-container {
   width: 95%;
-  margin: auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 100px;
@@ -283,6 +283,7 @@ a.active {
 
 .skill-card {
   position: relative;
+  border: 2px solid black;
 }
 
 .skill-img {
