--- a/app/globals.css
+++ b/app/globals.css
@@ -228,20 +228,40 @@ a.active {
 
 .about {
   width: 100%;
-  display: grid;
-  grid-template-columns: 30% 65%;
-  grid-gap: 40px;
+  display: flex;
+  justify-content: space-between;
+  height: 720px;
 }
 
 .about-img-container {
   position: relative;
+  width: 37%;
+  margin-right: 32px;
 }
 
 .about-info {
+  font-size: 20px;
+  overflow: hidden;
+  width: 57%;
   color: #fff;
   opacity: 0.6;
   font-size: 20px;
   line-height: 40px;
+  display: inline-block;
+  font-family: monospace;
+  white-space: normal;
+  margin-left: 32px;
+}
+
+.about-info span {
+  opacity: 0;
+  animation: fadeIn 0.005s forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
 }
 
 .about-img {
@@ -294,7 +314,6 @@ a.active {
 
 .skill-card {
   position: relative;
-  border: 2px solid black;
 }
 
 .skill-img {
