--- a/app/globals.css
+++ b/app/globals.css
@@ -200,6 +200,9 @@ a.active {
   background: #000;
   color: #fff;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-btn.live {
@@ -273,10 +276,11 @@ a.active {
 
 .download-cv-btn {
   position: absolute;
-  top: 48px;
-  left: 50%;
+  top: 40px;
+  left: 47%;
   transform: translateX(-50%);
-  padding: 10px 20px;
+  padding: 0 20px;
+  border-radius: 16px;
   color: #fff;
   border: none;
   font-size: 16px;
