--- a/app/globals.css
+++ b/app/globals.css
@@ -261,7 +261,9 @@ a.active {
   position: relative;
   border: solid #bcf7ff 2px;
   border-radius: 16px;
-  width: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-card-active {
@@ -272,6 +274,9 @@ a.active {
   width: 40vw;
   margin: 0 24px;
   transition: 2s;
+    display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 1410px) {
@@ -294,7 +299,7 @@ a.active {
 
 .project-content {
   position: relative;
-  padding: 40px;
+  padding: 24px;
   color: #fff;
   transition: 0.5s;
   opacity: 0;
@@ -342,7 +347,7 @@ a.active {
 
 .project-info {
   margin: 40px;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 30px;
   text-align: center;
 }
