--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,6 @@ a {
   opacity: 0.5;
   text-decoration: none;
   text-transform: capitalize;
-  line-height: 64px;
   transition: 0.5s;
   font-size: 20px;
 }
@@ -391,68 +390,32 @@ a.active {
 .about {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  height: 720px;
+  justify-content: center;
 }
 
 .about-img-container {
   position: relative;
   width: 40%;
+  margin-right: 64px;
 }
 
 .about-info {
-  width: 56%;
+  width: 60%;
   color: #fff;
   opacity: 0.6;
-  font-size: 20px;
+  font-size: 24px;
   line-height: 38px;
-  font-family: monospace;
   white-space: normal;
 }
 
-@media (max-width: 1815px) {
-  .about-info {
-    line-height: 36px;
-  }
+.highlight {
+  font-weight: bold;
+  opacity: 1;
+  color: white;
+  font-size: 25px;
 }
 
-@media (max-width: 1700px) {
-  .about-info {
-    line-height: 34px;
-  }
-}
-
-@media (max-width: 1660px) {
-  .about-info {
-    line-height: 32px;
-  }
-}
-
-@media (max-width: 1530px) {
-  .about-info {
-    line-height: 30px;
-  }
-}
-
-@media (max-width: 1500px) {
-  .about-info {
-    line-height: 28px;
-  }
-}
-
-@media (max-width: 1420px) {
-  .about-info {
-    line-height: 26px;
-  }
-}
-
-@media (max-width: 1320px) {
-  .about-info {
-    line-height: 24px;
-  }
-}
-
-@media (max-width: 1255px) {
+@media (max-width: 1380px) {
   .about-info {
     font-size: 18px;
   }
@@ -467,18 +430,18 @@ a.active {
 @media (max-width: 1060px) {
   .about {
     flex-direction: column;
-    height: auto;
-    justify-content: center;
+    align-items: center;
   }
   .about-img-container {
-    width: 100%;
+    width: 50%;
     margin-bottom: 32px;
+    margin-right: 0;
   }
   .about-info {
     width: 100%;
   }
   .about-section {
-    padding: 64px 24px;
+    padding: 32px 24px;
   }
 }
 
@@ -496,20 +459,19 @@ a.active {
 .about-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
   border-radius: 20px;
 }
 
 .download-cv-btn {
   position: absolute;
-  top: 28px;
+  top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  padding: 0 16px;
-  border-radius: 16px;
+  padding: 8px;
+  border-radius: 8px;
   color: #fff;
   border: none;
-  font-size: 16px;
+  font-size: 12px;
   text-transform: capitalize;
   cursor: pointer;
   transition: 0.5s;
@@ -522,7 +484,8 @@ a.active {
 
 @media (max-width: 680px) {
   .download-cv-btn {
-    top: 16px;
+    top: 10px;
+    font-size: 10px;
   }
 }
 
@@ -1096,7 +1059,7 @@ a.active {
   .contact-section {
     flex-direction: column;
     padding: 48px 32px;
-    height: 154vh
+    height: 154vh;
   }
   .contact-form {
     height: 35%;
@@ -1112,7 +1075,7 @@ a.active {
   .contact-section {
     flex-direction: column;
     padding: 48px 0;
-    height: 164vh
+    height: 164vh;
   }
 }
 
@@ -1120,7 +1083,7 @@ a.active {
   .contact-section {
     flex-direction: column;
     padding: 48px 0;
-    height: 172vh
+    height: 172vh;
   }
 }
 
